Swagger 수정으로 인한 커밋
테스트를 Talend API Tster로 진행하였었는데, 
이번에 Swagger로 변경하면서, 잘못된 주석이나 , POST/GET/PUT의 방식을 변경하여 수정.
