# go-ordering/model/modelStruct.go
@@ -32,7 +32,7 @@ type Menu struct {
 	CountryOf  string `bson:"countryOf"`  //원산지 Enums(한국, 일본, 중국)
 	Price      int    `bson:"price"`      //가격
 	Spicy      string `bson:"spicy"`      //맵기 Enums(아주매움, 매움, 보통, 순한맛)
-	Popularity int    `bson:"popularity"` //인기도
+	Popularity int    `bson:"popularity"` //인기도 mininum(1) maxinum(5)
 	IsDisabled bool   `bson:"isDisabled"` //판매여부 default(true)
 	TodayMenu  bool   `bson:"todayMenu"`  //오늘의 추천메뉴 여부 default(false)
 	Category   string `bson:"category"`   //메뉴 카테고리 Enums(한식, 일식, 중식)
@@ -49,4 +49,12 @@ type OrdererMenuLink struct {
 	OrderStatus    string `bson:"orderStatus"`    //주문상태 Enums(주문확인중 - 조리중 - 배달중 - 배달완료 - 주문취소)
 	OrdererAddress string `bson:"ordererAddress"` //주문자 주소
 	OrdererPhone   int    `bson:"ordererPhone"`   //주문자 폰번호
+}
+
+type BindChangeOrderState struct {
+	OrderNo        string `bson:"orderNo"`        //주문번호
+	OrderStatus    string `bson:"orderStatus"`    //주문상태 Enums(주문확인중 - 조리중 - 배달중 - 배달완료 - 주문취소)
+	OrdererAddress string `bson:"ordererAddress"` //주문자 주소
+	OrdererPhone   int    `bson:"ordererPhone"`   //주문자 폰번호
+	ChangeOrderCmd string `bson:"changeOrderCmd"` //주문 변경 Enums(주문추가, 주문취소, 정보변경)
 }
